Therion 5.4.1 (in progress):


--------------------------------------------------------------------------------

Therion 5.4.0 (2017-04-03):

infrastructure:
 * github.com/therion repos created
 * added support for mxe.cc cross-compiler
 * travis-ci.org integration

therion:
 * include UISv1 grade definitions [PR#6]
 * new ini file option: tex-fonts-optional
 * simple CSV database export with shot and equate lists [PR#9,19]
 * KML export improved (survey title, map comment, folder icons, entrances,
   survey names...) [PR#13]
 * added loop error info to .3d model
 * sync up img.c and img.h with latest Survex versions [PR#16]
 * update to latest poly2tri code [PR#43]
 * documentation improvements [PR#29,38,42]
 * Chinese translation added -- manual setup of fonts in the ini file
   (pdf-fonts) is necessary (thanks to Zhang Yuan Hai and Duncan Collis)
 * updated Bulgarian, Czech, English, German, Portuguese, Russian and Slovak
   translations [PR#9,12,18,34,41,46,55,56,58,60,65,67,68,69,70,72]
 * new and updated map symbols:
   - added line rope symbol, updated line handrail in MP [PR#9]
   - added area flowstone to AUT symbolset [PR#35]
   - added line fixed-ladder
   - added polyline_offset macro in MP
   - fixed AUT ceiling-step and ceiling-meander [PR#47]
   - changed AUT painted/fixed station to ASF:fixed layout [PR#48]
 * bugs and issues fixed:
   - fix missing font declarations when using pdf-fonts with more than 256 chars
   - added export of CLIP attribute in SHP export
   - include coordinate system and date-surveyed in the .3d export [PR#9,19]
   - fix warning "Can't Open Cavern Log File For Input" [PR#9]
   - fix compiler warnings [PR#10,22,24]
   - fix altitude colours with centreline [PR#11]
   - fix survex path detection
   - ensure text files end with a new line [PR#14]
   - fix typos in messages and comments [PR#17,23,25,39,40,45]
   - make "make clean" work fully for debug build [PR#20]
   - regularise indentation to use spaces [PR#26]