@@ -1,5 +1,10 @@
 Therion 5.4.1 (in progress):
 
+therion:
+ * added fonts-setup layout option
+ * added min-symbol-scale layout option
+ * added support for -scale <number> for point and line (1.0 = M)
+
 
 --------------------------------------------------------------------------------
 
